# PCC

./: README.rst  pyproject.toml
pcc/: __init__.py  __main__.py  utils.py
tests/: test_pcc.py
