[tool.poetry]
name = "pcc"
version = "0.1.0"
description = "Python Clean Code"
authors = ["Niels Lemmens <draso.odin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^19.10b0"
isort = "^4.3.21"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
pcc = 'pcc.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
