[tool.poetry]
name = "pcc"
version = "0.2.0"
description = "Python Clean Code"
authors = ["Niels Lemmens <draso.odin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
black = "^19.10b0"
isort = "^5"

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.poetry.scripts]
pcc = 'pcc.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
